1. make scrollbars invisible(no more weird glitches hurrayyy!) 2. fix boardcomments modal height,width

--- a/src/components/BoardPage.css
+++ b/src/components/BoardPage.css
@@ -1,5 +1,10 @@
 /* BoardPage.css */
 .boardpage{
+  overflow-y: auto;               /* ensure it's scrollable */
+  -webkit-overflow-scrolling: touch; /* smooth scrolling on iOS */
+  scrollbar-width: none;          /* Firefox */
+  -ms-overflow-style: none;       /* IE 10+ */
+  
    /* ensure it at least fills the viewport */
   min-height: 100vh;
   background: linear-gradient(90deg, rgba(141,167,168,1) 0%, rgba(141,167,168,1) 50%, rgba(141,167,168,1) 100%);
@@ -14,25 +19,7 @@
   flex-direction: column;
 }
 
-.image-grid {
-  column-count: 6;
-  column-gap: 12px;
-}
-@media (max-width: 1200px) {
-  .image-grid {
-    column-count: 5;
-  }
-}
-@media (max-width: 992px) {
-  .image-grid {
-    column-count: 4;
-  }
-}
-@media (max-width: 768px) {
-  .image-grid {
-    column-count: 2;
-  }
-}
+
 .image-item {
   break-inside: avoid;
   margin-bottom: 12px;
